--- a/server/.env.example
+++ b/server/.env.example
@@ -1,13 +1,10 @@
-DB_HOST=viajes_host
-DB_PORT=27021
-DB_USER=user
-DB_PASSWORD=1234
-DB_NAME=viajes
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
 
-JWT_SECRET=Pepino
+JWT_SECRET="pon aquí tu palabra secreta"
 
-APP_PORT=3015
-APP_HOST=viajes
-
-EMAIL_USER=horizontes.lejanosnos@gmail.com
-EMAIL_PASS=uooc bajr bcax kmud
+APP_PORT=
+APP_HOST=
