--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${DB_PASSWORD}
       MONGO_INITDB_DATABASE: ${DB_NAME}
       
-  backend:
+  backend_node:
     build: .
     container_name: ${APP_HOST}
     restart: unless-stopped
@@ -22,6 +22,20 @@ services:
     volumes:
       - ./:/app
       - node_modules:/app/node_modules
+
+  backend_flask:
+    build:
+      context: .
+      dockerfile: Dockerfile.flask
+    container_name: ${APP_HOST_FLASK}
+    restart: unless-stopped
+    ports:
+      - ${APP_PORT_FLASK}:5000
+    volumes:
+      - ./:/app
+    environment:
+      FLASK_ENV: development
+
 volumes:
   node_modules:
   mongo_desafio:
